添加删除群公告接口，支持删除指定群公告功能
